--- a/sass/modules/indexList.scss
+++ b/sass/modules/indexList.scss
@@ -15,10 +15,9 @@
     overflow: hidden;
     zoom:1;
     background: #fff;
-    margin-left:-10px;
-    li{
+    li, .cell{
         float: left;
-        padding: 24px 22px 30px;
+        padding: 24px 21px 30px;
         .img{
             width: 200px;
             height:200px;
