--- a/sass/modules/common.scss
+++ b/sass/modules/common.scss
@@ -121,3 +121,38 @@ body{
 .hide{
 	display: none!important;
 }
+.cell{
+        float: left;
+        padding: 24px 21px 30px;
+        .img{
+            width: 200px;
+            height:200px;
+            img{
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .info{
+            padding-left: 6px;
+            text-align: left;
+			  .amount{
+				font-size: $font-size-s;
+				color: $gray-light;
+        	}
+        }
+        .price{
+            padding: 22px 0 0;
+            color: $red01;
+            font-size: $font-size-m;
+            i{
+                font-size: 12px;
+                margin-right: 3px;
+                display: inline-block;
+            }
+        }
+        .name{
+            display: block;
+            padding: 8px 0;
+            color: $black;
+        }
+}
