--- a/sass/modules/supplierDetail/shopCart.scss
+++ b/sass/modules/supplierDetail/shopCart.scss
@@ -51,6 +51,9 @@
         background: $gray-light;
         font-size: $font-size-m;
     }
+    .acounted{
+        background-color: $byellow;
+    }
 }
 .shop-cartbasket-empty{
     text-align: center;
@@ -65,10 +68,15 @@
         padding-bottom: 12px;
     }
 }
+.shop-cart-list{
+    height: 300px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
 .shop-cart-row{
     display: table;
     table-layout: fixed;
-    height: 49px;
+    height: 50px;
     padding: 0 12px;
     font-size: 13px;
     .cell{
