--- a/sass/pages/supplierDetail.scss
+++ b/sass/pages/supplierDetail.scss
@@ -7,4 +7,5 @@
 @import '../modules/supplierDetail/shopNews';
 @import '../modules/supplierDetail/shopMenu';
 @import '../modules/supplierDetail/shopCart';
+@import '../modules/supplierDetail/proList';
 @import '../modules/bottom';
