--- a/sass/modules/common.scss
+++ b/sass/modules/common.scss
@@ -121,7 +121,7 @@ body{
 .hide{
 	display: none!important;
 }
-.cell{
+.goods-item{
         float: left;
         padding: 24px 21px 30px;
         .img{
