--- a/sass/pages/confirmOrder.scss
+++ b/sass/pages/confirmOrder.scss
@@ -1,97 +1,8 @@
 @import 'normalize.css';
 @import '../modules/common';
-.shop-information{
-    padding: 25px 50px;
-    background: #fff;
-    img{
-        width: 50px;
-        height: 50px;
-        vertical-align: middle;
-    }
-    .name{
-        font-size: $font-size-m;
-        color: #5e5e5e;
-        margin-left: 20px;
-    }
-    .contact{
-        float: right;
-        color: $cgray;
-        line-height: 50px;
-        span{
-            display: inline-block;
-            margin: 0 32px 0 20px;
-        }
-    }
-}
+@import '../modules/yellowTop';
+@import '../modules/supplierDetail/header';
 @import '../modules/supplierDetail/shopCart';
-.confirm-order-cart{
-    background: #fff;
-    .shop-cart-row{
-        padding: 0;
-        width: 100%;
-        text-align: center;
-        .goods-item{
-            padding: 24px 0 30px 50px;
-            .img{
-                width: 100px;
-                height: 100px;
-            }
-            .info{
-                margin-left: 34px;
-                margin-top: 15px;
-            }
-            .name{
-                color: #3c3c3c;
-                font-size: 13px;
-            }
-            .spec{
-                color: #999;
-                font-size: 13px;
-            }
-        }
-    }
-    .cell{
-        &.itemname{
-            width: 35%;
-        }
-         &.itemprice{
-            width: 15%;
-            span{
-                i{
-                    font-size: 12px;
-                }
-                color: #ea0b0b;
-                font-size: 16px;
-                font-weight: 700;
-            }
-        }
-         &.itemtotal{
-            width: 20%;
-             .total{
-                 i{
-                    font-size: 12px;
-                }
-                color: #ea0b0b;
-                font-size: 16px;
-                font-weight: 700;
-            }
-        }
-         &.itemquantity{
-            width: 18%;
-            button{
-                font-size: 16px;
-            }
-            input{
-                width: 42px;
-                font-size: 13px;
-            }
-           
-        }
-         &.itemdelete{
-            width: 15%;
-           
-        }
+@import '../modules/order/confirm';
+@import '../modules/bottom';
 
-    }
-
-}
