--- a/sass/pages/supplierDetail.scss
+++ b/sass/pages/supplierDetail.scss
@@ -1,5 +1,6 @@
 @import 'normalize.css';
 @import '../modules/common';
+@import '../modules/yellowTop';
 @import '../modules/supplierDetail/header';
 @import '../modules/supplierDetail/shopNav';
 @import '../modules/indexList';
@@ -8,4 +9,5 @@
 @import '../modules/supplierDetail/shopMenu';
 @import '../modules/supplierDetail/shopCart';
 @import '../modules/supplierDetail/proList';
+@import '../modules/supplierDetail/leftMenu';
 @import '../modules/bottom';
