--- a/sass/pages/supplierSearch.scss
+++ b/sass/pages/supplierSearch.scss
@@ -1,5 +1,6 @@
 @import 'normalize.css';
 @import '../modules/common';
+@import '../modules/yellowTop';
 @import '../modules/supplierDetail/header';
 @import '../modules/indexList';
 @import '../modules/bottom';
