--- a/css/shopCartList.css
+++ b/css/shopCartList.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url(normalize.css);
 @font-face {
   font-family: 'iconfont';
@@ -132,112 +131,106 @@ body {
   .goods-item .spec {
     color: #999; }
 
-.top-left {
-  font-size: 13px;
-  color: #fd6f1f;
-  float: left; }
-  .top-left span {
-    border-right: 1px solid #999;
-    padding-right: 16px;
-    display: inline-block; }
-  .top-left .login {
-    color: #ff6e1f;
-    margin-right: 10px; }
-  .top-left .free-regist {
-    color: #666; }
-  .top-left .logo-out {
-    color: #999;
-    padding-left: 16px; }
-
-.top-right {
-  float: right; }
-  .top-right li {
+.shop-topbar {
+  line-height: 58px;
+  height: 58px;
+  background: #ff6e1f; }
+  .shop-topbar .topbar-item {
     float: left;
-    padding: 0 15px;
-    border-right: 1px solid #999;
-    margin-right: -1px; }
-    .top-right li a {
-      color: #999; }
-
-.img-logo {
-  width: 136px; }
-
-.search-box {
-  margin: 23px 30px 0 92px;
-  position: relative; }
-  .search-box .icon-search {
-    color: #e2e2e2;
-    transform: rotate(95deg);
-    -ms-transform: rotate(95deg);
-    /* IE 9 */
-    -moz-transform: rotate(95deg);
-    /* Firefox */
-    -webkit-transform: rotate(95deg);
-    /* Safari 和 Chrome */
-    position: absolute;
-    left: 10px;
-    top: 18px;
-    font-size: 30px; }
-  .search-box .search-input {
-    border: 2px solid #ff6e1f;
-    padding-left: 50px;
-    line-height: 38px;
-    height: 38px;
-    width: 420px;
-    font-size: 14px; }
-  .search-box .search-btn {
-    line-height: 44px;
-    height: 42px;
-    background-color: #ff6e1f;
-    padding: 0 28px;
     color: #fff;
-    font-size: 22px; }
+    font-size: 16px;
+    width: 120px;
+    text-align: center; }
+  .shop-topbar .topbar-logo {
+    margin: 10px 85px 8px 0;
+    width: 80px;
+    height: 42px; }
 
-.add-supper {
-  margin-top: 30px;
-  margin-right: 15px;
-  line-height: 26px; }
-  .add-supper .icon-add-supper {
-    color: #ff6e1f;
-    font-size: 26px;
+.pos-top {
+  position: absolute;
+  top: 0;
+  background: rgba(0, 0, 0, 0.4); }
+
+.topbar-right {
+  float: right;
+  color: #fff;
+  font-size: 13px; }
+  .topbar-right span {
+    padding-right: 16px; }
+  .topbar-right .logo-out {
+    color: #fff;
+    padding-left: 14px;
+    box-sizing: border-box;
+    position: relative; }
+    .topbar-right .logo-out:before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 50%;
+      width: 1px;
+      height: 14px;
+      margin-top: -7px;
+      background: #bab5bb; }
+
+.yellow-top a.current, .yellow-top a:hover {
+  background: #ff4e1f; }
+
+.yellow-top .topbar-right .logo-out:before {
+  background: #fff; }
+
+.mod-img {
+  background: url("../images/bg01.jpg") no-repeat;
+  background-size: cover;
+  padding-top: 58px;
+  height: 197px; }
+
+.shopguide-info {
+  margin-top: 18px; }
+  .shopguide-info img {
+    float: left;
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+    border: 4px solid rgba(255, 255, 255, 0.3);
     vertical-align: middle; }
-  .add-supper span {
-    color: #ff6e1f;
-    font-size: 16px; }
+  .shopguide-info .shop-intro {
+    float: left;
+    margin: 26px 0 12px 20px;
+    color: #fff; }
+    .shopguide-info .shop-intro p {
+      line-height: 34px;
+      font-size: 18px; }
+      .shopguide-info .shop-intro p.contact {
+        margin-left: -8px; }
+      .shopguide-info .shop-intro p .iconfont {
+        vertical-align: middle; }
+      .shopguide-info .shop-intro p .icon-tel {
+        font-size: 18px; }
+      .shopguide-info .shop-intro p .shoper-txt {
+        margin-left: 12px;
+        margin-right: 65px; }
 
-.qrcode-tb {
-  margin-left: 50px; }
-  .qrcode-tb span {
-    color: #ff341c; }
-  .qrcode-tb .qrcode-img {
-    display: block;
-    margin-top: 8px;
-    width: 54px; }
-
-.nav-list {
-  overflow: hidden;
-  font-size: 16px;
-  line-height: 16px;
-  margin: 20px 0 10px; }
-  .nav-list li {
-    float: left; }
-    .nav-list li a {
-      margin: 10px 8px 0;
-      color: #3c3c3c;
-      display: inline-block;
-      padding: 6px 12px; }
-      .nav-list li a.current {
-        color: #ff6e1f; }
-      .nav-list li a:hover {
-        background: #ff6e1f;
-        color: #fff;
-        border-radius: 2px; }
-    .nav-list li .line {
-      width: 2px;
-      height: 15px;
-      background-color: #dcdbdb;
-      display: inline-block;
-      vertical-align: middle; }
+.relative-info {
+  margin-top: 46px; }
+  .relative-info .disprice {
+    margin-right: 66px; }
+    .relative-info .disprice span {
+      display: block;
+      color: #fff;
+      font-size: 20px; }
+      .relative-info .disprice span.money {
+        font-size: 28px; }
+  .relative-info .round-rect {
+    border-radius: 25px;
+    line-height: 36px;
+    height: 36px;
+    border: 1px solid #fff;
+    color: #fff;
+    padding: 0 25px;
+    margin-top: 5px;
+    font-size: 18px;
+    border-width: 2px;
+    background: transparent; }
 
 .title-h {
   margin-left: 15px;
@@ -377,3 +370,62 @@ body {
   bottom: 0px;
   right: 0px;
   z-index: 10; }
+
+.cart-list .cart-item {
+  background: #fff;
+  margin-bottom: 60px;
+  padding-bottom: 36px; }
+
+.cart-list .shop-info .info {
+  margin-left: 40px; }
+
+.cart-list .shop-info .shop-name {
+  padding: 0 20px 5px 5px; }
+
+.cart-list .shop-info .label {
+  display: inline-block;
+  background: #ff4736;
+  color: #fff;
+  padding: 0 4px;
+  margin-left: 12px; }
+
+.cart-list .shop-info p {
+  color: #3c3c3c;
+  font-size: 14px; }
+  .cart-list .shop-info p.shop-des {
+    line-height: 24px; }
+    .cart-list .shop-info p.shop-des .iconfont {
+      color: #ff6e1f;
+      vertical-align: middle;
+      font-size: 18px;
+      margin-right: 5px; }
+
+.cart-list .shop-info .clear-cart {
+  font-size: 16px;
+  color: #666;
+  margin-top: 15px;
+  margin-right: 12px; }
+
+.list-bottom {
+  border-top: 1px solid #e5e5e5;
+  margin: 0 28px;
+  position: relative; }
+  .list-bottom .total-price {
+    margin-top: 40px;
+    color: #666; }
+    .list-bottom .total-price span {
+      font-size: 16px;
+      color: #101010;
+      margin: 0 70px 0 15px; }
+    .list-bottom .total-price .price {
+      color: #ea0b0b;
+      font-weight: 700; }
+  .list-bottom .go-check {
+    position: absolute;
+    top: 26px;
+    right: 35px;
+    padding: 0 46px;
+    height: 33px;
+    line-height: 33px;
+    color: #fffefe;
+    font-size: 16px; }
