--- a/sass/modules/common.scss
+++ b/sass/modules/common.scss
@@ -106,6 +106,11 @@ body{
 	color: $color;
 	padding: 0 25px;
 }
+.round-rect{
+    @include round-rect(25px, 30px,#ff7521, #fff);
+    background-color: #ff7521;
+    display: inline-block;
+}
 .icon-arrow-right{
 	vertical-align: middle;
 	font-size: 16px;
@@ -138,21 +143,34 @@ body{
 			  .amount{
 				font-size: $font-size-s;
 				color: $gray-light;
+                line-height: 20px;
+                .line{
+                    display: inline-block;
+                    background: #c1c1c1;
+                    height: 12px;
+                    width: 1px;
+                    margin: -4px 6px 0;
+                    vertical-align: middle;
+                }
         	}
         }
         .price{
             padding: 22px 0 0;
             color: $red01;
             font-size: $font-size-m;
-            i{
-                font-size: 12px;
-                margin-right: 3px;
-                display: inline-block;
+            .price-n{
+                i{
+                    font-size: 12px;
+                    display: inline-block;
+                }
             }
         }
         .name{
             display: block;
             padding: 8px 0;
             color: $black;
+        }
+        .spec{
+            color: $gray-light;
         }
 }
