--- a/sass/modules/supplierDetail/header.scss
+++ b/sass/modules/supplierDetail/header.scss
@@ -1,47 +1,3 @@
-.shop-topbar{
-    position: absolute;
-    top:0;
-    line-height: 58px;
-    height: 58px;
-    background: rgba(0, 0, 0, 0.4);
-    .topbar-item{
-        float: left;
-        padding-right: 40px;
-        color: #fff;
-        font-size: $font-size-m;
-    }
-    .topbar-logo{
-        margin: 8px 115px 8px 0;
-        width: 80px;
-        height: 42px;
-    }
-}
-.topbar-right{
-    float: right;
-    color: #fff;
-    font-size: $font-size-s;
-    span{
-        padding-right: 16px;
-        
-    }
-   .logo-out{
-        color: #fff;
-        padding-left: 14px;
-        box-sizing: border-box;
-        position: relative;
-        &:before{
-            content: '';
-            position: absolute;
-            left:0;
-            top: 50%;
-            width: 1px;
-            height: 14px;
-            margin-top: -7px;
-            background: #bab5bb;
-            
-        }
-    }
-}
 .mod-img{
     background: url("../images/bg01.jpg") no-repeat;
     background-size: cover;
@@ -99,5 +55,6 @@
         margin-top: 5px;
         font-size: 18px;
         border-width: 2px;
+        background: transparent;
     }
 }
