--- a/css/supplierSearch.css
+++ b/css/supplierSearch.css
@@ -3,8 +3,8 @@
 @font-face {
   font-family: 'iconfont';
   /* project id 156314 */
-  src: url("http://at.alicdn.com/t/font_vfftwxdfak1kbj4i.eot");
-  src: url("http://at.alicdn.com/t/font_vfftwxdfak1kbj4i.eot?#iefix") format("embedded-opentype"), url("http://at.alicdn.com/t/font_vfftwxdfak1kbj4i.woff") format("woff"), url("http://at.alicdn.com/t/font_vfftwxdfak1kbj4i.ttf") format("truetype"), url("http://at.alicdn.com/t/font_vfftwxdfak1kbj4i.svg#iconfont") format("svg"); }
+  src: url("http://at.alicdn.com/t/font_kglwvmj5xavsfw29.eot");
+  src: url("http://at.alicdn.com/t/font_kglwvmj5xavsfw29.eot?#iefix") format("embedded-opentype"), url("http://at.alicdn.com/t/font_kglwvmj5xavsfw29.woff") format("woff"), url("http://at.alicdn.com/t/font_kglwvmj5xavsfw29.ttf") format("truetype"), url("http://at.alicdn.com/t/font_kglwvmj5xavsfw29.svg#iconfont") format("svg"); }
 
 .iconfont {
   font-family: "iconfont" !important;
@@ -131,6 +131,30 @@ body {
     color: #3c3c3c; }
   .goods-item .spec {
     color: #999; }
+
+.list-bottom {
+  border-top: 1px solid #e5e5e5;
+  margin: 0 28px;
+  position: relative; }
+  .list-bottom .total-price {
+    margin-top: 40px;
+    color: #666; }
+    .list-bottom .total-price span {
+      font-size: 16px;
+      color: #101010;
+      margin: 0 70px 0 15px; }
+    .list-bottom .total-price .price {
+      color: #ea0b0b;
+      font-weight: 700; }
+  .list-bottom .go-check {
+    position: absolute;
+    top: 26px;
+    right: 35px;
+    padding: 0 46px;
+    height: 33px;
+    line-height: 33px;
+    color: #fffefe;
+    font-size: 16px; }
 
 .shop-topbar {
   line-height: 58px;
