--- a/sass/modules/common.scss
+++ b/sass/modules/common.scss
@@ -203,3 +203,22 @@ body{
         font-size: 16px;
     }
 }
+.cover{
+    background-color: rgba(0,0,0,0.6);
+    position: absolute;
+    top: 0;
+    bottom: -1130px;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    .layer-main{
+        background: #fff;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        width: 800px;
+        text-align: center;
+    }
+}
