--- a/sass/modules/order/confirm.scss
+++ b/sass/modules/order/confirm.scss
@@ -180,6 +180,7 @@
     position: relative;
     height: 80px;
     line-height: 80px;
+    padding-right: 60px;
     .total-price{
         margin-left: 68px;
         .amount{
